--- a/_events/4pg2.md
+++ b/_events/4pg2.md
@@ -4,4 +4,4 @@ day: Wed Feb 28th
 location: 7pm in SCI 3.230
 ---
 
-Our 2nd general body organization meeting with pizza provided.
+Our 2nd general body organization meeting of the semester. With pizza provided.
