Update npm, update events, update officers

--- a/_events/020sl.md
+++ b/_events/020sl.md
@@ -4,4 +4,6 @@ day: Mon Oct 6th
 location: 1st Floor SU @ 4-7 PM
 ---
 
+![Silver Line Event Flyer](/assets/img/sl-flyer.png)
+
 Will announce opening dates and other final changes to Silver Line. DART encouraging people to show up to get to know more about the finalized schedule and route that will serve 7 different cities!
