--- a/_events/020gm.md
+++ b/_events/020gm.md
@@ -1,5 +1,5 @@
 ---
-title: CfBT General Meeting
-day: Wed Mar 4th
-location: HH 2.706
+title: CfBT General Meeting + Pizza
+day: Wed Mar 4th @ 7PM
+location: JO 3.601
 ---
