--- a/_events/040gm.md
+++ b/_events/040gm.md
@@ -1,5 +1,5 @@
 ---
-title: CfBT General Meeting
-day: Wed May 6th
-location: HH 2.706
+title: CfBT General Meeting + Pizza
+day: Wed May 6th @ 7PM
+location: JO 3.601
 ---
