--- a/_events/030gm.md
+++ b/_events/030gm.md
@@ -1,5 +1,5 @@
 ---
-title: CfBT General Meeting
-day: Wed Apr 1st
-location: HH 2.706
+title: CfBT General Meeting + Pizza
+day: Wed Apr 1st @ 7PM
+location: JO 3.601
 ---
